# ws-availability

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.api  Dockerfile.cacher  Dockerfile.worker  LICENSE  MANIFEST.in  README.md  README_EN.md  USAGE_EN.md  USAGE_FR.md  cache.py  config.py  config.py.sample  debug_api_state.py  docker-compose.yml  log_init.py  pyproject.toml  reproduce_data_wfcatalog.js  reproduce_data_wfcatalog.py  reproduce_issue_38.py  reproduce_on_server.py  requirements-api.txt  requirements-cacher.txt  requirements.txt  start.py  update_wsavailability_schema.sql
.github/workflows/: publish.yml  test.yml
apps/: constants.py  data_access_layer.py  fdsn_client.py  globals.py  logging_config_dev.ini  logging_config_production.ini  models.py  output.py  parameters.py  redis_client.py  resif_client.py  restriction.py  root.py  settings.py  utils.py  wfcatalog_client.py  wfcatalog_client_old.py  worker.py
apps/availability/: constants.py  model.py  output.py  root.py
docs/: USAGE_EN.md  USAGE_FR.md  example_responses.txt  refactoring_progress.md
static/: resifws.css
templates/: availability_doc.html  availability_doc_en.html  doc-eida.html  doc.html  doc_en.html  wadl.xml  ws-availability.wadl.xml
tests/: conftest.py  reproduce_500.py  test.py  test_availability.py  test_data_access.py  test_data_access_layer.py  test_merge_parameter.py  test_models.py  test_orderby.py  test_query_no_endtime.py  test_restriction.py  test_root.py  test_settings.py  test_utils.py  test_wfcatalog_filtering.py  test_wfcatalog_query.py
tests/data/: cache.pickle
view_manager/: main.js
views/: main.js
