[project]
name = "ws-availability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==2.3.2",
    "gunicorn==20.1.0",
    "obspy==1.3.1",
    "pymongo==4.2.0",
    "redis==4.4.4",
    "requests==2.31.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
